--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -58,12 +58,15 @@
 		{% endif %}
 		<hr>
 		<h2>{% trans "Comments" %}</h2>
+		<table>
 		{% if comments %}
-		<ul>
 		{% for comment in comments %}
-			<li>{{ comment }}</li>
+			<tr class="comment">
+				<th><a href="{{ comment.url }}">{{ comment.timestamp }}</a></th>
+				<td>{{ comment.content }}</td>
+			</tr>
 		{% endfor %}
-		</ul>
+		</table>
 		{% else %}
 		<div class="alert alert-warning">{% trans %}This user has not commented yet.{% endtrans %}</div>
 		{% endif %}
