--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -10,5 +10,6 @@
 		</div>
 	{% endblock %}
 	{% include 'elements/js.twig' %}
+	<script>{% block javascript %}{% endblock %}</script>
 	</body>
 </html>
