adjusted settings page

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -161,7 +161,7 @@ a.hero-unit:hover {
 	}
 }
 
-.form-horizontal input {
+.form-horizontal input, .form-horizontal select {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
