--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -59,7 +59,7 @@
 		<h4 id="language">{% trans "Language" %}</h4>
 		<form method="post" action="{{filename}}?change-language" class="form-horizontal">
 			<div class="control-group">
-				<label class="control-label" for="language-setting">{% trans "View the site in" %}</label>
+				<label class="control-label" for="language-setting">{% trans "View site in" %}</label>
 				<div class="controls">
 					<select name="language" id="language-setting">
 						<option value="en-US"{% if language == "en-US" %} selected{% endif %}>{% trans "English" %}</option>
