--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -3,17 +3,17 @@
 {% block content %}
 <h1 class="form-register-heading">{% trans "Register" %}</h1>
 <div class="row-fluid">
-    <div class="span4">{% if message %}
-		<div class="alert {% if success %}alert-success{% else %}alert-error{% endif %}">{{ message | raw}}</div>{% endif %}
+    <div class="span4">
+		{% include 'functions/alert.twig' with {'selector' : 'register'} %}
 		<form class="form-register" method="post">
 			<label for="username"></label>
-			<input type="text" class="input-block-level" name="username" id="username" placeholder="{% trans "Username" %}" data-toggle="tooltip" title="first tooltip" {% if username%}value="{{username}}"{% else %}autofocus{% endif %}>
+			<input type="text" class="input-block-level" name="username" id="username" placeholder="{% trans "Username" %}" data-toggle="tooltip" title="first tooltip" {% if username%}value="{{username}}"{% else %}autofocus{% endif %} required>
 			<label for="email"></label>
-			<input type="email" class="input-block-level" name="email"  id="email" placeholder="{% trans "Email address" %}"{% if email%} value="{{email}}"{% endif %}>
+			<input type="email" class="input-block-level" name="email"  id="email" placeholder="{% trans "Email address" %}"{% if email%} value="{{email}}"{% endif %} required>
 			<label for="password"></label>
-			<input type="password" class="input-block-level" name="password"  id="password" placeholder="{% trans "Password" %}">
+			<input type="password" class="input-block-level" name="password"  id="password" placeholder="{% trans "Password" %}" required>
 			<label for="password-repeat"></label>
-			<input type="password" class="input-block-level" name="password-repeat" id="password-repeat" placeholder="{%trans "Confirm password" %}">
+			<input type="password" class="input-block-level" name="password-repeat" id="password-repeat" placeholder="{%trans "Confirm password" %}" required>
 			<button class="btn btn-large btn-primary" type="submit">{% trans "Register" %}</button>
 			<a href="{{base}}/login" class="btn btn-link">{% trans "Already registered?" %}</a>
 		</form>
