fix broken links on carousel prototype

--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -14,7 +14,7 @@
 			</ol>
 			<div class="carousel-inner">
 				<!--<div class="active item">
-					<a href="{{base}}rage/addon/moderncombat">
+					<a href="{{base}}/addons/rage/moderncombat">
 						<img src="{{base}}/img/cmc.png" alt>
 					</a>
 					<div class="carousel-caption">
@@ -23,7 +23,7 @@
                     </div>
 				</div>!-->
 				<div class="active item">
-					<a href="{{base}}rage/addon/infinity">
+					<a href="{{base}}/addons/rage/infinity">
 						<img src="http://placehold.it/768x432" alt>
 					</a>
 					<div class="carousel-caption">
