fixed typo in openid function template

--- a/app/templates/functions/openid.twig
+++ b/app/templates/functions/openid.twig
@@ -2,7 +2,7 @@
 	<a href="#by-openid" class="btn btn-openid" data-toggle="collapse" data-target="#by-openid">{% trans "OpenID" %}</a>
 	<a href="?openid=google" class="btn btn-google">{% trans "Google" %}</a>
 	<a href="?openid=facebook" class="btn btn-facebook">{% trans "Facebook" %}</a>
-	<a href="?openid=twiiter" class="btn btn-twitter">{% trans "Twitter" %}</a>
+	<a href="?openid=twitter" class="btn btn-twitter">{% trans "Twitter" %}</a>
 </p>
 <div class="collapse" id="by-openid">
 	<form action="{{filename}}?openid=custom" method="post" class="form-inline">
