--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -1,15 +1,39 @@
 <!doctype html>
 <html lang="{% trans "en" %}">
-{% include 'elements/head.twig' %}
+	<head lang="{% trans "en" %}">
+		<meta charset="utf-8">
+		<title>{{brand}}</title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<link rel="shortcut icon" href="{{base}}/img/favicon.ico" type="image/x-icon">
+		<link href="{{base}}/css/bootstrap.min.css" rel="stylesheet">
+		<link href="{{base}}/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="{{base}}/css/lorry.min.css" rel="stylesheet">
+	</head>
 	<body>{% block body %}
 		{% include 'functions/navbar.twig' %}
 		<div class="container-fluid">
 		{% block content %}
 		{% endblock %}
-		{% include 'elements/footer.twig' %}
-		</div>
+		<hr>
+		<footer>
+			<p class="visible-phone">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
+			{% if site_notice %}<p><strong>{{site_notice}}</strong></p>{% endif %}
+			<p class=""><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}}<span class="muted"> · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact us" %}</a><span class="hidden-phone">{% if site_trademark %} · {{site_trademark|raw}}{% endif %}</span></span>.</p>
+		</footer>
+	</div>
 	{% endblock %}
-	{% include 'elements/js.twig' %}
+	<script src="{{base}}/js/jquery.min.js"></script>
+	<script src="{{base}}/js/bootstrap.min.js"></script>
+	<script src="{{base}}/js/yepnope.min.js"></script>
+	<script src="{{base}}/js/lorry.js"></script>
 	<script>{% block javascript %}{% endblock %}</script>
+	<script>yepnope({
+		test: ('placeholder' in $('<input>')[0]),
+		nope: [
+				'{{base}}/poly/placeholder_polyfill.min.css',
+				'{{base}}/poly/placeholder_polyfill.jquery.min.combo.js'
+			  ]
+	});</script>
 	</body>
 </html>
