made game addon pages slightly more functional

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -123,6 +123,17 @@ a.hero-unit:hover {
 	color: red;
 }
 
+
+.addon  {
+	background-color: grey;
+	padding: 20px;
+	background-color: #eee;
+	border: solid 1px grey;
+	color: black;
+	font-weight: bold;
+	font-size: 1.4em;
+}
+
 #introduction {
 	/*  color: white;
 	  background-color: #444;*/
