--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -1,7 +1,9 @@
 {% extends 'root.twig' %}
 
+{% set title = 'Settings'|trans %}
+
 {% block content %}
-<h1>{%trans "Settings" %}</h1>
+<h1>{{ title }}</h1>
 <div class="row-fluid" id="settings">
 	<div class="span4">
 		<hr class="visible-phone">
