--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -36,18 +36,18 @@
 	<hr>
 	<div class="row-fluid">
 		<div class="span8">
-			<h3>Rounds and Addons</h3>
+			<h3>{% trans %}Rounds and Addons{% endtrans %}</h3>
 			<img src="" style="width: 150px; height: 105px;">
 			<img src="" style="width: 150px; height: 105px;">
 			<img src="" style="width: 150px; height: 105px;">
 		</div>
 		<div class="span4">
-			<h3>Community</h3>
+			<h3>{% trans %}Community{% endtrans %}</h3>
 			<p>State: <span class="success">Active</span> [<a href="#" id="state">?</a>]</p>
 			<ul>
-				<li><a href="#">Project page</a></li>
-				<li><a href="#">Report a bug</a></li>
-				<li><a href="#">Interested in an update?</a></li>
+				<li><a href="#">{% trans %}Project page{% endtrans %}</a></li>
+				<li><a href="#">{% trans %}Report a bug{% endtrans %}</a></li>
+				<li><a href="#">{% trans %}Interested in an update?{% endtrans %}</a></li>
 			</ul>
 		</div>
 	</div>
