--- a/app/templates/site/community.twig
+++ b/app/templates/site/community.twig
@@ -1,5 +1,7 @@
 {% extends 'root.twig' %}
 
+{% set title = 'Community'|trans %}
+
 {% block content %}
-<h1>{% trans %}Community{% endtrans %}</h1>
+<h1>{{ title }}</h1>
 {% endblock %}
