--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -1,7 +1,9 @@
 {% extends 'root.twig' %}
 
+{% set title = 'Contact us'|trans %}
+
 {% block content %}
-<h1>{% trans "Contact us" %}</h1>
+<h1>{{ title }}</h1>
 <div class="row-fluid">
     <div class="span7">
 		<h2>{% trans %}We &hearts; feedback{% endtrans %}</h2>
