streamligned design on multiple pages

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -147,12 +147,18 @@ a.hero-unit:hover {
 	margin-bottom: 40px;
 }
 
-#settings h4 {
+h4 {
 	margin-top: 40px;
 }
 
-#settings h2 + h4 {
+h2 + h4 {
 	margin-top: 20px;
+}
+
+#login, #register {
+	h4 {
+		margin-top: 10px;
+	}
 }
 
 .form-login, .form-register {
