--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -1,5 +1,7 @@
 {% extends 'root.twig' %}
 
+{% set title = 'Publish'|trans %}
+
 {% block content %}
 <h1>{% trans %}Publish{% endtrans %}</h1>
 <p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
