changed multiple urls and presenter names

--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -1,5 +1,7 @@
 {% extends 'root.twig' %}
 
+{% set title = 'Release'|trans %}
+
 {% block content %}
 <h1>{% trans %}Release your addon{% endtrans %}</h1>
 <div class="row-fluid">
