fixed wrong translation token

--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -38,8 +38,8 @@
 		{% if profiles %}
 			<h4>{% trans %}Profiles{% endtrans %}</h4>
 			<ul>
-				<li><a href="{{clonkforge}}">{% trans %}1{{username}} on the Clonk Forge{% endtrans %}</a></li>
-				<li><a href="{{github}}">{% trans %}1{{username}} on GitHub{% endtrans %}</a></li>
+				<li><a href="{{clonkforge}}">{% trans %}{{ username }} on the Clonk Forge{% endtrans %}</a></li>
+				<li><a href="{{github}}">{% trans %}{{ username }} on GitHub{% endtrans %}</a></li>
 			</ul>
 		{% endif %}
 	</div>
