--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -31,7 +31,7 @@
 		</div>
 		<div class="social">
 			<h4>{% trans %}Or, select your login service:{% endtrans %}</h4>
-			{% include "functions/openid.twig "%}
+			{% include 'functions/openid.twig' %}
 		</div>
 	</div>
 	<div class="span8">
