--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -22,7 +22,7 @@
 		<hr>
 		<div class="social">
 			<h4>{% trans %}Alternatively use a login service:{% endtrans %}</h4>
-			{% include "functions/openid.twig "%}
+			{% include 'functions/openid.twig' %}
 		</div>
 	</div>
 	<div class="span8">
