--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -214,6 +214,11 @@ dl dd {
 	border: solid 1px lightgray;
 }
 
+input.noerror:focus:invalid:focus, textarea.noerror:focus:invalid:focus, select.noerror:focus:invalid:focus {
+	border-color: rgba(82,168,236,0.8);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+}
+
 @media (min-width: 768px) {
 	#introduction {
 		margin: 8em 0;
