--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -9,9 +9,9 @@
 		{% include 'functions/alert.twig' with {'selector' : 'login'} %}
 		<form class="form-login" method="post" action="{{ filename }}">
 			<label for="username"></label>
-			<input type="text" class="input-block-level" name="username" id="username" placeholder="{% trans "Username" %}"{% if username %} value="{{ username|escape }}"{% endif %}{% if not username_exists %} autofocus{% endif %}>
+			<input type="text" class="input-block-level" name="username" id="username" placeholder="{% trans "Username" %}"{% if username %} value="{{ username|escape }}"{% endif %}{% if not username_exists %} autofocus{% endif %} required>
 			<label for="password"></label>
-			<input type="password" class="input-block-level" name="password" id="password" placeholder="{% trans "Password" %}" {% if username and username_exists %} autofocus{% endif %}>
+			<input type="password" class="input-block-level" name="password" id="password" placeholder="{% trans "Password" %}" {% if username and username_exists %} autofocus{% endif %} required>
 			<label class="checkbox">
 				<input type="checkbox" name="remember" value="yes"{% if remember %} checked{% endif %}> {% trans "Remember on this device" %}
 			</label>
@@ -42,4 +42,18 @@
 
 	</div>
 </div>
+{% endblock %}
+
+
+{% block javascript %}
+{{ parent() }}
+
+$(document).ready(function() {
+	$('.form-login input').each(function() {
+		$(this).addClass('noerror')
+		var require = function() {$(this).removeClass('noerror');};
+		$(this).keypress(require);
+		$(this).blur(require);
+	});
+});
 {% endblock %}
