--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -45,13 +45,16 @@
 
 $(document).ready(function() {
 	var options = {placement:'bottom', trigger:'focus'};
-	$('#username').tooltip(options);
+	$('.form-register input').each(function() {
+		$(this).tooltip(options);
+		$(this).addClass('noerror')
+		var require = function() {$(this).removeClass('noerror');};
+		$(this).keypress(require);
+		$(this).blur(require);
+	});
 	if($('#username').attr('autofocus')) {
 		// trigger the focus event for the tooltip
 		$('#username').focus();
 	}
-	$('#email').tooltip(options);
-	$('#password').tooltip(options);
-	$('#password-repeat').tooltip(options);
 });
 {% endblock %}
